[tool.poetry]
name = "project-task-10-1-3"
version = "0.1.0"
description = ""
authors = ["Svetlana Eliseeva <sve2772@gmail.com>"]
readme = "README.md"
packages = [{include = "project_task_10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
